--- a/CSS_advanced/styles/2-style.css
+++ b/CSS_advanced/styles/2-style.css
@@ -3,17 +3,21 @@ html {
 }
 
 body {
-    foreground-color: #161616;
+    color: #161616;
 }
 
-visually-hidden {
+a {
+    color: #161616;
+}
+
+.visually-hidden {
     display: none;
 }
 
-card-category {
-    foreground-color: #D73953;
+.card-category {
+    color: #D73953;
 }
 
-section-tagline {
-    foreground-color: #D73953;
+.section-tagline {
+    color: #D73953;
 }
