--- a/CSS_advanced/styles/3-style.css
+++ b/CSS_advanced/styles/3-style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    color: text-color;
+    color: var(--text-color);
 }
 
 a {
@@ -15,18 +15,18 @@ a {
 }
 
 .card-category {
-    color: color-primary;
+    color: var(--color-primary);
 }
 
 .section-tagline {
-    color: color-primary;
+    color: var(--color-primary);
 }
 
-.root {
+:root {
     --color-primary: #D73953;
     --color-black: #090909;
     --color-white: #FFFFFF;
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
-    --text-color: color-black;
+    --text-color: var(--color-black);
 }
